# pacm

./: CMakeLists.txt  README.md  TODO.md
applications/pacmconsole/: CMakeLists.txt
applications/pacmconsole/src/: main.cpp
apps/: CMakeLists.txt
apps/pacm-cli/: CMakeLists.txt
apps/pacm-cli/src/: main.cpp
apps/pacmconsole/: CMakeLists.txt
apps/pacmconsole/src/: main.cpp
include/icy/pacm/: config.h  installmonitor.h  installtask.h  package.h  packagemanager.h
include/scy/pacm/: config.h  installmonitor.h  installtask.h  package.h  packagemanager.h  types.h
src/: installmonitor.cpp  installtask.cpp  package.cpp  packagemanager.cpp
tests/: CMakeLists.txt  pacmtests.cpp
